Update sponsors list and fix Our Story timeline spacing

--- a/src/components/Story.module.css
+++ b/src/components/Story.module.css
@@ -63,13 +63,12 @@
     flex: 1.2;
     position: relative;
     z-index: 2;
-    margin-left: -4rem;
-    /* Overlap effect */
+    margin-left: 2rem;
 }
 
 .timelineItem:nth-child(even) .contentColumn {
     margin-left: 0;
-    margin-right: -4rem;
+    margin-right: 2rem;
 }
 
 .timelineCard {
@@ -130,7 +129,7 @@
         text-align: left;
         font-size: 5rem;
         -webkit-text-stroke: 1px rgba(18, 30, 60, 0.15);
-        margin-bottom: -1.5rem;
+        margin-bottom: 0.5rem;
         z-index: 1;
         letter-spacing: -2px;
     }
